--- a/multipurpose-on-react/package.json
+++ b/multipurpose-on-react/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
