--- a/multipurpose-on-react/package.json
+++ b/multipurpose-on-react/package.json
@@ -11,6 +11,7 @@
     "start-server": "json-server --watch server/db.json --port 3004"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
