--- a/multipurpose-on-react/package.json
+++ b/multipurpose-on-react/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "postinstall": "npm simple-git-hooks",
-    "start-server": "json-server --watch server/db.json --port 3004"
+    "start-server": "json-server --watch server/db.json --port 3004",
+    "dev": "concurrently \"npm run start-server\" \"npm run start"
   },
   "dependencies": {
     "classnames": "^2.3.2",
@@ -22,6 +23,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "concurrently": "^7.4.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
