--- a/multipurpose-on-react/package.json
+++ b/multipurpose-on-react/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "concurrently": "^7.4.0",
     "postcss": "^8.4.18",
+    "postcss-nested": "^6.0.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "stylelint": "^14.13.0",
