--- a/multipurpose-on-react/package.json
+++ b/multipurpose-on-react/package.json
@@ -17,6 +17,7 @@
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
+    "react-star-ratings": "^2.3.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
