--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.2",
     "react-star-ratings": "^2.3.0",
-    "swr": "^1.3.0"
+    "react-text-mask": "^5.5.0",
+    "swr": "^1.3.0",
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-input-mask": "^3.0.2",
+    "@types/react-text-mask": "^5.4.11",
     "@vitejs/plugin-react": "^2.1.0",
     "concurrently": "^7.4.0",
     "postcss": "^8.4.18",
