--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "dev": "concurrently \"npm run start-server\" \"npm run start"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.1",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
-    "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
-    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.2",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.2",
