--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@pbe/react-yandex-maps": "^1.2.1",
     "classnames": "^2.3.2",
-    "formik": "^2.2.9",
     "react-css-modules": "^4.7.11",
     "react-hook-form": "^7.39.2",
     "react-input-mask": "^2.0.4",
@@ -22,9 +21,7 @@
     "react-router-dom": "^6.4.2",
     "react-star-ratings": "^2.3.0",
     "react-text-mask": "^5.5.0",
-    "swr": "^1.3.0",
-    "yup": "^0.32.11",
-    "yup-phone": "^1.3.2"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
