--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-input-mask": "^3.0.2",
+    "@types/react-star-ratings": "^2.3.0",
     "@types/react-text-mask": "^5.4.11",
     "@vitejs/plugin-react": "^2.1.0",
     "concurrently": "^7.4.0",
