--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylelint-config-standard": "^28.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-aliases": "^0.9.7"
   }
 }
