--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "postinstall": "npx simple-git-hooks",
-    "start-server": "npx json-server --watch server/db.json --port 3004",
-    "dev": "concurrently \"npm run start-server\" \"npm run start"
+    "start-server": "npx json-server --watch server/db.json --port 3004"
   },
   "dependencies": {
     "@pbe/react-yandex-maps": "^1.2.1",
