--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "postinstall": "npx simple-git-hooks",
-    "start-server": "npx json-server --watch server/db.json --port 3004"
+    "fix-styles": "prettier-stylelint --write 'src/*/.{css}' ",
+    "start-server": "json-server --watch server/db.json --port 3004"
   },
   "dependencies": {
     "@pbe/react-yandex-maps": "^1.2.1",
